[project]
name = "comfyui-promptattention"
description = "Nodes: CLIP Directional Prompt Attention Encode. Direction prompt attention tries to solve the problem of contextual words (or parts of the prompt) having an effect on much later or irrelevant parts of the prompt."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/andersxa/comfyui-PromptAttention"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "comfyui-PromptAttention"
Icon = ""
